contact icons added

--- a/index.html
+++ b/index.html
@@ -19,171 +19,168 @@
   </head>
 
   <body>
-    <div class="generic-container">
-      <header class="generic-header">
-        <div class="global-header">
-          <a class="header-logo" href="#"> <span>Web</span>Studio</a>
-          <nav class="main-navigation">
-            <ul>
-              <li><a id="current" href="index.html">Studio</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="#">Contacts</a></li>
-            </ul>
-          </nav>
-          <div class="contact-links">
-           <div class="contact-email"><svg class="contact-icon">
-                  <use href="./symbol-defs.svg#icon-envelope" />
-                </svg>
-                <a class="contact-email" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a>
-            </div>
-             <div class="contact-number">
-              <svg class="contact-icon">
-                  <use href="./symbol-defs.svg#icon-smartphone" />
-                </svg>
-                <a href="tel:+1212-772-4150">+1 212-772-4150</a>
-             </div>   
-         </div>
-      </header>
-
-      <main class="main-index">
-        <!-- Main title and button -->
-        <div class="hero-section">
-          <section class="hero-section-title">
-            <h1>
-              EFFECTIVE SOLUTIONS FOR <br />
-              YOUR BUSINESS
-            </h1>
-            <button class="hero-button" type="button">
-              Request our service
-            </button>
-          </section>
-        </div>
-
-        <!-- Group 1  -->
-        <div class="content-section">
-          <section class="hero-section-list">
-            <ul>
-              <li>
-                <h3>ATTENTION TO DETAILS</h3>
-                <p>
-                  We go into all the details and processes of your business to
-                  develop a customized solution.
-                </p>
-              </li>
-              <li>
-                <h3>PUNCTUALITY</h3>
-                <p>
-                  With us, you can feel safe and secure. An important principle
-                  of the company: respect your time and deadlines.
-                </p>
-              </li>
-              <li>
-                <h3>PLANNING</h3>
-                <p>
-                  You will be able to observe and participate in every phase of
-                  solution development and implementation.
-                </p>
-              </li>
-              <li>
-                <h3>MODERN TECHNOLOGIES</h3>
-                <p>
-                  We use innovative tools to solve assigned tasks. It's time to
-                  simplify work processes.
-                </p>
-              </li>
-            </ul>
-          </section>
-          <!-- What we do -->
-          <div class="what-we-do-section">
-            <h2>What we do</h2>
-            <ul>
-              <li>
-                <img
-                  src="images/what-we-do-img1.jpg"
-                  alt="writing code"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li>
-                <img
-                  src="images/what-we-do-img2.jpg"
-                  alt="developing mobile apps"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li>
-                <img
-                  src="images/what-we-do-img3.jpg"
-                  alt="choosing colors"
-                  width="370"
-                  height="294"
-                />
-              </li>
-            </ul>
+    <header class="generic-header">
+      <div class="global-header">
+        <a class="header-logo" href="#"> <span>Web</span>Studio</a>
+        <nav class="main-navigation">
+          <ul>
+            <li><a id="current" href="index.html">Studio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <div class="contact-links">
+          <div class="contact-email">
+            <svg class="icon">
+              <use href="./symbol-defs.svg#icon-envelope" />
+            </svg>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </div>
+          <div class="contact-number">
+            <svg class="icon">
+              <use href="./symbol-defs.svg#icon-smartphone" />
+            </svg>
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
           </div>
         </div>
+      </div>
+    </header>
 
-        <!-- Our Team  -->
-        <div class="our-team-section">
-          <h2>Our Team</h2>
+    <main class="main-index">
+      <!-- Main title and button -->
+      <div class="hero-section">
+        <section class="hero-section-title">
+          <h1>
+            EFFECTIVE SOLUTIONS FOR <br />
+            YOUR BUSINESS
+          </h1>
+          <button class="hero-button" type="button">Request our service</button>
+        </section>
+      </div>
+
+      <!-- Group 1  -->
+      <div class="content-section">
+        <section class="hero-section-list">
           <ul>
-            <li class="team-member-card">
-              <img
-                src="images/our-team-img1.jpg"
-                alt="team member Christopher Walker"
-                width="270"
-                height="260"
-              />
-              <h3>Christopher Walker</h3>
-              <p>Product Designer</p>
+            <li>
+              <h3>ATTENTION TO DETAILS</h3>
+              <p>
+                We go into all the details and processes of your business to
+                develop a customized solution.
+              </p>
             </li>
-            <li class="team-member-card">
-              <img
-                src="images/our-team-img2.jpg"
-                alt="team member Kylie Evans"
-                width="270"
-                height="260"
-              />
-              <h3>Kylie Evans</h3>
-              <p>Frontend Developer</p>
+            <li>
+              <h3>PUNCTUALITY</h3>
+              <p>
+                With us, you can feel safe and secure. An important principle of
+                the company: respect your time and deadlines.
+              </p>
             </li>
-            <li class="team-member-card">
-              <img
-                src="images/our-team-img3.jpg"
-                alt="team member Ryan Harris"
-                width="270"
-                height="260"
-              />
-              <h3>Ryan Harris</h3>
-              <p>Marketing</p>
+            <li>
+              <h3>PLANNING</h3>
+              <p>
+                You will be able to observe and participate in every phase of
+                solution development and implementation.
+              </p>
             </li>
-            <li class="team-member-card">
+            <li>
+              <h3>MODERN TECHNOLOGIES</h3>
+              <p>
+                We use innovative tools to solve assigned tasks. It's time to
+                simplify work processes.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!-- What we do -->
+        <div class="what-we-do-section">
+          <h2>What we do</h2>
+          <ul>
+            <li>
               <img
-                src="images/our-team-img4.jpg"
-                alt="team meamber Tyler Moore"
-                width="270"
-                height="260"
+                src="images/what-we-do-img1.jpg"
+                alt="writing code"
+                width="370"
+                height="294"
               />
-              <h3>Tyler Moore</h3>
-              <p>UI Designer</p>
+            </li>
+            <li>
+              <img
+                src="images/what-we-do-img2.jpg"
+                alt="developing mobile apps"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/what-we-do-img3.jpg"
+                alt="choosing colors"
+                width="370"
+                height="294"
+              />
             </li>
           </ul>
         </div>
-      </main>
-      <!-- Footer -->
-      <footer class="global-footer">
-        <div class="global-footer-div">
-          <a class="footer-logo" href="#"><span>Web</span>Studio</a>
-          <address class="footer-address">
-            695 Park Ave, NY 10065, USA <br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-            <a href="tel:+12127724150">+1 212-772-4150</a>
-          </address>
-        </div>
-      </footer>
-    </div>
+      </div>
+
+      <!-- Our Team  -->
+      <div class="our-team-section">
+        <h2>Our Team</h2>
+        <ul>
+          <li class="team-member-card">
+            <img
+              src="images/our-team-img1.jpg"
+              alt="team member Christopher Walker"
+              width="270"
+              height="260"
+            />
+            <h3>Christopher Walker</h3>
+            <p>Product Designer</p>
+          </li>
+          <li class="team-member-card">
+            <img
+              src="images/our-team-img2.jpg"
+              alt="team member Kylie Evans"
+              width="270"
+              height="260"
+            />
+            <h3>Kylie Evans</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li class="team-member-card">
+            <img
+              src="images/our-team-img3.jpg"
+              alt="team member Ryan Harris"
+              width="270"
+              height="260"
+            />
+            <h3>Ryan Harris</h3>
+            <p>Marketing</p>
+          </li>
+          <li class="team-member-card">
+            <img
+              src="images/our-team-img4.jpg"
+              alt="team meamber Tyler Moore"
+              width="270"
+              height="260"
+            />
+            <h3>Tyler Moore</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </div>
+    </main>
+    <!-- Footer -->
+    <footer class="global-footer">
+      <div class="global-footer-div">
+        <a class="footer-logo" href="#"><span>Web</span>Studio</a>
+        <address class="footer-address">
+          695 Park Ave, NY 10065, USA <br />
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+          <a href="tel:+12127724150">+1 212-772-4150</a>
+        </address>
+      </div>
+    </footer>
   </body>
 </html>
