hero svg icons added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
         <section class="hero-section-list">
           <ul>
             <li>
+              <svg>
+                <rect width="270" height="120" fill="#F5F4FA" />
+                <use
+                  href="./symbol-defs.svg#icon-antenna"
+                  x="35%"
+                  y="20%"
+                  width="64"
+                  height="64"
+                />
+              </svg>
               <h3>ATTENTION TO DETAILS</h3>
               <p>
                 We go into all the details and processes of your business to
@@ -70,6 +80,16 @@
               </p>
             </li>
             <li>
+              <svg>
+                <rect width="270" height="120" fill="#F5F4FA" />
+                <use
+                  href="./symbol-defs.svg#icon-clock"
+                  x="35%"
+                  y="20%"
+                  width="64"
+                  height="64"
+                />
+              </svg>
               <h3>PUNCTUALITY</h3>
               <p>
                 With us, you can feel safe and secure. An important principle of
@@ -77,6 +97,16 @@
               </p>
             </li>
             <li>
+              <svg>
+                <rect width="270" height="120" fill="#F5F4FA" />
+                <use
+                  href="./symbol-defs.svg#icon-diagram"
+                  x="35%"
+                  y="20%"
+                  width="64"
+                  height="64"
+                />
+              </svg>
               <h3>PLANNING</h3>
               <p>
                 You will be able to observe and participate in every phase of
@@ -84,6 +114,16 @@
               </p>
             </li>
             <li>
+              <svg>
+                <rect width="270" height="120" fill="#F5F4FA" />
+                <use
+                  href="./symbol-defs.svg#icon-astronaut"
+                  x="35%"
+                  y="20%"
+                  width="64"
+                  height="64"
+                />
+              </svg>
               <h3>MODERN TECHNOLOGIES</h3>
               <p>
                 We use innovative tools to solve assigned tasks. It's time to
