background image and icons added

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="contact-links">
           <div class="contact-email">
             <svg class="icon">
-              <use href="./symbol-defs.svg#icon-envelope" />
+              <use href="./images/symbol-defs.svg#icon-envelope" />
             </svg>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </div>
           <div class="contact-number">
             <svg class="icon">
-              <use href="./symbol-defs.svg#icon-smartphone" />
+              <use href="./images/symbol-defs.svg#icon-smartphone" />
             </svg>
             <a href="tel:+1212-772-4150">+1 212-772-4150</a>
           </div>
@@ -66,7 +66,7 @@
               <svg>
                 <rect width="270" height="120" fill="#F5F4FA" />
                 <use
-                  href="./symbol-defs.svg#icon-antenna"
+                  href="./images/symbol-defs.svg#icon-antenna"
                   x="35%"
                   y="20%"
                   width="64"
@@ -83,7 +83,7 @@
               <svg>
                 <rect width="270" height="120" fill="#F5F4FA" />
                 <use
-                  href="./symbol-defs.svg#icon-clock"
+                  href="./images/symbol-defs.svg#icon-clock"
                   x="35%"
                   y="20%"
                   width="64"
@@ -100,7 +100,7 @@
               <svg>
                 <rect width="270" height="120" fill="#F5F4FA" />
                 <use
-                  href="./symbol-defs.svg#icon-diagram"
+                  href="./images/symbol-defs.svg#icon-diagram"
                   x="35%"
                   y="20%"
                   width="64"
@@ -117,7 +117,7 @@
               <svg>
                 <rect width="270" height="120" fill="#F5F4FA" />
                 <use
-                  href="./symbol-defs.svg#icon-astronaut"
+                  href="./images/symbol-defs.svg#icon-astronaut"
                   x="35%"
                   y="20%"
                   width="64"
@@ -177,6 +177,38 @@
             />
             <h3>Christopher Walker</h3>
             <p>Product Designer</p>
+            <div class="social-media-contacts">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg>
+                      <use href="./images/symbol-defs.svg#icon-linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-member-card">
             <img
@@ -187,6 +219,38 @@
             />
             <h3>Kylie Evans</h3>
             <p>Frontend Developer</p>
+            <div class="social-media-contacts">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg>
+                      <use href="./images/symbol-defs.svg#icon-linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-member-card">
             <img
@@ -197,6 +261,38 @@
             />
             <h3>Ryan Harris</h3>
             <p>Marketing</p>
+            <div class="social-media-contacts">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg>
+                      <use href="./images/symbol-defs.svg#icon-linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-member-card">
             <img
@@ -207,19 +303,159 @@
             />
             <h3>Tyler Moore</h3>
             <p>UI Designer</p>
+            <div class="social-media-contacts">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><svg>
+                      <use href="./images/symbol-defs.svg#icon-facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg>
+                      <use href="./images/symbol-defs.svg#icon-linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
+      <section class="customers-section">
+        <div class="regular-customers-section">
+          <h2>Regular Customers</h2>
+          <ul>
+            <li class="customer-item">
+              <a href="#"
+                ><svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-ya-co"
+                    width="106"
+                    height="60"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#"
+                ><svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-company-tagline"
+                    width="106"
+                    height="60"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#"
+                ><svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-company"
+                    width="106"
+                    height="60"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#"
+                ><svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-foster-peters"
+                    width="106"
+                    height="60"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#"
+                ><svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-brand"
+                    width="106"
+                    height="60"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#"
+                ><svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-company-last"
+                    width="106"
+                    height="60"
+                  />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="global-footer">
-      <div class="global-footer-div">
-        <a class="footer-logo" href="#"><span>Web</span>Studio</a>
-        <address class="footer-address">
-          695 Park Ave, NY 10065, USA <br />
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-          <a href="tel:+12127724150">+1 212-772-4150</a>
-        </address>
+      <div class="footer-container">
+        <div class="global-footer-address">
+          <a class="footer-logo" href="#"><span>Web</span>Studio</a>
+          <address class="footer-address">
+            695 Park Ave, NY 10065, USA <br />
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+            <a href="tel:+12127724150">+1 212-772-4150</a>
+          </address>
+        </div>
+        <div class="footer-social-links">
+          <h4>Find us on</h4>
+          <ul>
+            <li class="footer-item">
+              <a href="#"
+                ><svg>
+                  <use href="./images/symbol-defs.svg#icon-instagram" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#"
+                ><svg>
+                  <use href="./images/symbol-defs.svg#icon-twitter" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#"
+                ><svg>
+                  <use href="./images/symbol-defs.svg#icon-facebook" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                <svg>
+                  <use href="./images/symbol-defs.svg#icon-linkedin" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
