--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="generic-container">
-     <header class="generic-header">
+      <header class="generic-header">
         <div class="global-header">
           <a class="header-logo" href="#"> <span>Web</span>Studio</a>
           <nav class="main-navigation">
@@ -26,19 +26,20 @@
             </ul>
           </nav>
           <div class="contact-links">
-           <div class="contact-email"><svg class="contact-icon">
-                  <use href="./symbol-defs.svg#icon-envelope" />
-                </svg>
-                <a class="contact-email" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a>
+            <div class="contact-email">
+              <svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-envelope" />
+              </svg>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </div>
-             <div class="contact-number">
-              <svg class="contact-icon">
-                  <use href="./symbol-defs.svg#icon-smartphone" />
-                </svg>
-                <a href="tel:+1212-772-4150">+1 212-772-4150</a>
-             </div>   
-         </div>
+            <div class="contact-number">
+              <svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-smartphone" />
+              </svg>
+              <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+            </div>
+          </div>
+        </div>
       </header>
 
       <main class="main-portofolio">
