icons and portofolio box shadows

--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
             <p>Product Designer</p>
             <div class="social-media-contacts">
               <ul>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-instagram" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-twitter" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-facebook" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#">
                     <svg>
                       <use href="./images/symbol-defs.svg#icon-linkedin" />
@@ -221,28 +221,28 @@
             <p>Frontend Developer</p>
             <div class="social-media-contacts">
               <ul>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-instagram" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-twitter" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-facebook" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#">
                     <svg>
                       <use href="./images/symbol-defs.svg#icon-linkedin" />
@@ -263,28 +263,28 @@
             <p>Marketing</p>
             <div class="social-media-contacts">
               <ul>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-instagram" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-twitter" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-facebook" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#">
                     <svg>
                       <use href="./images/symbol-defs.svg#icon-linkedin" />
@@ -305,28 +305,28 @@
             <p>UI Designer</p>
             <div class="social-media-contacts">
               <ul>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-instagram" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-twitter" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#"
                     ><svg>
                       <use href="./images/symbol-defs.svg#icon-facebook" />
                     </svg>
                   </a>
                 </li>
-                <li>
+                <li class="contact-icon">
                   <a href="#">
                     <svg>
                       <use href="./images/symbol-defs.svg#icon-linkedin" />
@@ -424,7 +424,7 @@
           </address>
         </div>
         <div class="footer-social-links">
-          <h4>Find us on</h4>
+          <h3>Find us on</h3>
           <ul>
             <li class="footer-item">
               <a href="#"
