--- a/portfolio.html
+++ b/portfolio.html
@@ -191,13 +191,48 @@
       </main>
 
       <footer class="global-footer">
-        <div class="global-footer-div">
-          <a class="footer-logo" href="#"><span>Web</span>Studio</a>
-          <address class="footer-address">
-            695 Park Ave, NY 10065, USA <br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-            <a href="tel:+12127724150">+1 212-772-4150</a>
-          </address>
+        <div class="footer-container">
+          <div class="global-footer-address">
+            <a class="footer-logo" href="#"><span>Web</span>Studio</a>
+            <address class="footer-address">
+              695 Park Ave, NY 10065, USA <br />
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+              <a href="tel:+12127724150">+1 212-772-4150</a>
+            </address>
+          </div>
+          <div class="footer-social-links">
+            <h3>Find us on</h3>
+            <ul>
+              <li class="footer-item">
+                <a href="#"
+                  ><svg>
+                    <use href="./images/symbol-defs.svg#icon-instagram" />
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#"
+                  ><svg>
+                    <use href="./images/symbol-defs.svg#icon-twitter" />
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#"
+                  ><svg>
+                    <use href="./images/symbol-defs.svg#icon-facebook" />
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#">
+                  <svg>
+                    <use href="./images/symbol-defs.svg#icon-linkedin" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
