corner rounding for rectangle

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <ul>
             <li>
               <svg>
-                <rect width="270" height="120" fill="#F5F4FA" />
+                <rect width="270" height="120" fill="#F5F4FA" rx="4" ry="4" />
                 <use
                   href="./images/symbol-defs.svg#icon-antenna"
                   x="35%"
@@ -81,7 +81,7 @@
             </li>
             <li>
               <svg>
-                <rect width="270" height="120" fill="#F5F4FA" />
+                <rect width="270" height="120" fill="#F5F4FA" rx="4" ry="4" />
                 <use
                   href="./images/symbol-defs.svg#icon-clock"
                   x="35%"
@@ -98,7 +98,7 @@
             </li>
             <li>
               <svg>
-                <rect width="270" height="120" fill="#F5F4FA" />
+                <rect width="270" height="120" fill="#F5F4FA" rx="4" ry="4" />
                 <use
                   href="./images/symbol-defs.svg#icon-diagram"
                   x="35%"
@@ -115,7 +115,7 @@
             </li>
             <li>
               <svg>
-                <rect width="270" height="120" fill="#F5F4FA" />
+                <rect width="270" height="120" fill="#F5F4FA" rx="4" ry="4" />
                 <use
                   href="./images/symbol-defs.svg#icon-astronaut"
                   x="35%"
